Add order to tools, add getTools on openapi doc and unit test
